--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -61,6 +61,13 @@ section.task-list {
     }
   }
 
+  p {
+    color: red;
+    font-size: 12px;
+    float: right;
+    margin-right: 88px;
+  }
+
   main {
     margin-top: 3rem;
 
